[package]
name = "rust-stripe-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stripe = "0.41.0"
axum = "0.8.3"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
